<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/gradient">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_9sdp"
                    android:src="@drawable/back_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="HELP CENTER"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_help"
                    android:layout_width="@dimen/_100sdp"

                    android:layout_height="@dimen/_90sdp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/help" />

                <View
                    android:layout_width="@dimen/_2sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_toRightOf="@+id/iv_help"
                    android:background="@color/grey"
                    android:padding="@dimen/_20sdp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/ll_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_toRightOf="@+id/iv_help"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:fontFamily="sans-serif-condensed"
                        android:text="Customer suppport"
                        android:textColor="@color/grey_900"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:gravity="left"
                        android:text="Please get in touch with us, \nwe will be happy to help you !!"
                        android:textColor="@color/grey_600"
                        android:textSize="@dimen/_11sdp" />
                </LinearLayout>


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2sp"
                android:background="@color/grey" />

            <LinearLayout
                android:id="@+id/btn_helpline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Helpline Number:"
                    android:textColor="@color/grey_800"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mobile_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:text=""
                    android:textColor="@color/grey_600"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Support Email id:"
                    android:textColor="@color/grey_800"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:text="kifaytistore@gmail.com"
                    android:textColor="@color/grey_600"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2sp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/grey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:maxLines="1"
                android:text="Frequently Asked Questions (FAQ)"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/faq1"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/faq11"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/faq2"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/faq22"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/faq3"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/faq33"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/faq4"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/faq44"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/faq5"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/faq55"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/faq6"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/faq66"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/faq7"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/faq77"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/faq8"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:text="@string/faq88"
                android:textColor="@color/grey_800"
                android:textSize="@dimen/_12sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2sp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/grey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="2sp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/grey_300"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tv_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Privacy Policy"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:id="@+id/tv_term"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Terms &amp; Conditions"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:id="@+id/tv_about"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="About us"
                    android:textSize="@dimen/_9sdp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>